collapse issue and some reponsiveness issue are fixed

--- a/WEBAPP/static/css/about.css
+++ b/WEBAPP/static/css/about.css
@@ -15,7 +15,7 @@ body{
 #title-card{
     font-family: 'Open Sans Condensed', sans-serif;
     font-family: 'Staatliches', cursive;
-    font-size: 80px;
+    font-size: 65px;
     font-weight: bold;
 }
 
